fixed text overflown in user-panel

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -171,3 +171,10 @@ video {
 #files-to-upload {
   display: none;
 }
+
+.file-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 250px;
+}
